Incorrect use of <langinfo.h> in libgpg-error
Closed, ResolvedPublic

Assigned To
Authored By
miod
Dec 12 2018, 8:49 AM
Subscribers

Description

pr_integer() in src/estream-printf.c tries to output thousands separator by using THOUSANDS_SEP from <langinfo.h>.

However, that symbol is a GNUism for THOUSEP, which is the proper name for the thousands separator, as specified in http://pubs.opengroup.org/onlinepubs/9699919799/basedefs/langinfo.h.html .

Suggested patch :

Details

Version
libgpg-error 1.32

Related Objects