estream: Use correct POSIX name THOUSEP.

* src/estream-printf.c: Replace HAVE_LANGINFO_THOUSANDS_SEP by
HAVE_LANGINFO_THOUSEP.
(pr_integer): Use THOUSEP.
--

GnuPG-bug-id: 4286
Reported-by: miod
Signed-off-by: Werner Koch <wk@gnupg.org>